[gd_scene load_steps=3 format=3 uid="uid://ce4fr7221ckku"]

[ext_resource type="Script" uid="uid://c0mnpwl7waw0a" path="res://lottery_manager.gd" id="1_vdysb"]
[ext_resource type="Texture2D" uid="uid://djff4oy2gxr1h" path="res://icon.svg" id="2_uifje"]

[node name="LotteryManager" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vdysb")

[node name="CreateLotteryButton" type="Button" parent="."]
layout_mode = 2
offset_left = 332.0
offset_top = 5.0
offset_right = 583.0
offset_bottom = 141.0
text = "Create Lottery"
icon = ExtResource("2_uifje")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 343.0
offset_top = 153.0
offset_right = 460.0
offset_bottom = 332.0
columns = 3

[node name="ItemList0" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList1" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList2" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList3" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList4" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList5" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList6" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList7" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ItemList8" type="ItemList" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[connection signal="button_down" from="CreateLotteryButton" to="." method="_on_create_lottery_button_button_down"]
